force-app/main/default/objects/News_Article__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <description>The author of the article</description>
</CustomField>