force-app/main/default/objects/News_Article__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>Html</type>
    <length>32768</length>
    <description>Article body content (rich text)</description>
</CustomField>