force-app/main/default/objects/News_Article__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>News</fullName>
                <default>true</default>
                <label>News</label>
            </value>
            <value>
                <fullName>Announcement</fullName>
            </value>
            <value>
                <fullName>Tournament</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Article category</description>
</CustomField>