force-app/main/default/objects/News_Article__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <label>Featured</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether article is featured on homepage</description>
</CustomField>