force-app/main/default/objects/News_Article__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish Date</label>
    <type>DateTime</type>
    <description>Date and time article was published</description>
</CustomField>